[package]
name = "game"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = [
#     "dynamic",
# ] }
# skybox = { path = "crates/skybox" }
bevy_ext = { path = "crates/bevy_ext" }
opensimplex_noise_rs = "0.3.0"
rand = "0.8.4"

[workspace]
include = ["crates/bevy_ext"]
exclude = ["crates/sandbox"]
